[project]
name = "tor-relay-scanner"
version = "0.1.0"
description = ""
authors = [
    {name = "xenups",email = "xenups@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
